# EasyDC

./: CMakeLists.txt  README.md  Remark  main.cpp  parametersMILPDemo.txt  parametersSboxDemo.txt
benchmarks/BlockCipher/: AES.cl  DES.cl  GIFT_64.cl  KLEIN.cl  KLEIN2.cl  LBlock.cl  MIBS.cl  MIBS1.cl  PRESENT.cl  PRINCE.cl  Piccolo.cl  Rectangle.cl  SIMON.cl  SIMON32.cl  SIMON48.cl  SKINNY_64t2n.cl  TWINE.cl
benchmarks/NIST/: ASCON.cl  Elephant_Dumbo.cl  GIFT-COFB.cl  ISAP-KECCAK-p.cl  PHOTON-Beetle.cl  Romulus  SPARKLE.cl  TinyJAMBU.cl  Xoodyak.cl
benchmarks/WordWise/: AES.cl  KLEIN2.cl  LBlock.cl  MIBS.cl  MIBS1.cl  PHOTON-Beetle.cl  PHOTON-Beetle1.cl  Piccolo.cl  SKINNY_128.cl  TWINE.cl  piccoloMatrix
data/differential/BitWiseMILP/dc/present_64/AS/: 1_round_dc.txt  2_round_dc.txt  3_round_dc.txt  4_round_dc.txt  5_round_dc.txt
data/sbox/ARX/: present_64.sage.py
data/sbox/ARX/statistics/-2147483648bits/: present_64.txt
data/sbox/AS/ddt/4bits/: Elephant.txt  MIBS.txt  sboxs.txt
data/sbox/AS/possPmHex/4bits/: Elephant.txt  MIBS.txt  sboxs.txt
data/sbox/AS/reduction/4bits/: Elephant.txt  MIBS.txt  sboxs.txt
data/sbox/AS/sage/input/4bits/: Elephant.sage  Elephant.sage.py  MIBS.sage  MIBS.sage.py  sboxs.sage  sboxs.sage.py
data/sbox/AS/sage/output/4bits/: MIBS.txt  (+2 more)
data/sbox/AS/statistics/4bits/: Elephant.txt  MIBS.txt  sboxs.txt
data/sbox/AS/trueTable/4bits/: Elephant.csv  MIBS.csv  sboxs.csv
include/branchNum/: BranchNum.h
include/differentialCry/: BwMILP.h  MILPcons.h  WwMILP.h
include/preprocessing/: ASTNode.h  Inliner.h  Interpreter.h  ProcedureH.h  ThreeAddressNode.h  Transformer.h  Value.h  ValueCommon.h
include/sbox/: Check.h  Reduction.h  SboxExtC.h  SboxModel.h  SyntaxGuided.h  superball.h  superballMGR.h
include/util/: setup.h  utilities.h
lib/: CMakeLists.txt
lib/branchNum/: BranchNum.cpp
lib/differentialCry/: BwMILP.cpp  MILPcons.cpp  WwMILP.cpp
lib/language/: lexer.l  parser.y
lib/preprocessing/: ASTNode.cpp  Inliner.cpp  Interpreter.cpp  ProcedureH.cpp  Transformer.cpp  Value.cpp  ValueCommon.cpp
lib/sbox/: Check.cpp  Reduction.cpp  SboxModel.cpp  superball.cpp  superballMGR.cpp
lib/util/: utilities.cpp
(+171 files in other folders)
